designファイルの修正
